--- a/app/views/project/list.html.erb
+++ b/app/views/project/list.html.erb
@@ -24,7 +24,7 @@
 			      			<span class="card-title grey-text text-darken-1">
 		      				  <h4><%= project.shortname %></h4>
                     <div class="name-author text-bottom">
-                      <a>By BProCoder</a>
+                      <a>By AnelloTec</a>
                     </div>
 	      					</span>
 		      				<span class="card-action grey-text text-darken-1 text-right">
