--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">C4S-JP</h5>
-        <p class="grey-text text-lighten-4">C4S-JPは、Code4Startup.comと提携した日本のサイトです。実在する素晴らしいＷＥＢサイトを参考に、サイトの作り方（プログラミング方法）を動画で学ぶことができます。C4S-JPは、
-日本独自コンテンも追加して行く予定です。  </p>
+        <h5 class="white-text">AnelloTecについて</h5>
+        <p class="grey-text text-lighten-4">AnelloTecは、イタリア語の「Anello（輪）」と「Tecnologia（テクノロジー）」を組み合わせた「テクノロジーの輪」を現す造語です。
+        本サイトでは、実在する素晴らしいＷＥＢサイトを参考に、サイトの作り方（プログラミング方法）を学ぶことができます。このサイトを通して、輪に加わるエンジニアが増えることを望みます。</p>
       </div>
       
       <div class="col l3 s12">
@@ -27,7 +27,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-    © 2016 Copyright Code4Startup-JP
+    © 2017 Copyright AnelloTec
     </div>
   </div>
 </footer>
