--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="row slide intro">
-	<div class="col s12">
-		<div class="container">
+  <div class="col s12">
+	<div class="container">
       <div class="slide-cn" id="slide-home">
           <!-- SLIDE ITEM -->
           <div class="slide-item">
@@ -77,12 +77,11 @@
 		 <div class="col s6 aboutC4SLeft">
 			 <div class="row">
 				 <div class="ct col-xs-10 col-xs-push-2">
-						 <h2 class="big">BProCoderってなに？</h2>
+						 <h2 class="big">AnelloTecってなに？</h2>
 						 <p class="mc-text">
-							 BProCoderは、リブレックス合同会社が提供する<br>
-							 プログラム学習用webサービスです。<br>
-							 世界で有名なサービスを題材に、課金機能からサーバ公開まで<br>
-							 実際のスタートアップ（起業）で求められる機能を想定し、<br>学習することができるサービスです。<br>
+							 AnelloTecは、イタリア語の「Anello（輪）」と「Tecnologia（テクノロジー）」を組み合わせた「テクノロジーの輪」を現す造語です。 
+							 本サイトでは、世界で有名なサービスを題材にしたプログラム学習用webサービスです。
+							 簡単なアプリケーション開発ではなく、実際のスタートアップ（起業）で求められる機能を想定し、課金機能からサーバ公開までを学ぶことができます。<br>
 							 プロのプログラマーへの最短コース！<br>
 						 </p>
 
