--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -400,6 +400,10 @@ html .awe-static {
   padding: 10px; 
 }
 
+.subContentsWrap2 img {
+  width: 100%;
+  height: 100%;
+}
 
 .input-field {
   font-family: 'Lato', sans-serif;
